--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Clio OAuth Configuration
 CLIO_CLIENT_ID=yPQgrYo6Pn6nntONl30RM8OyIjIMkKxKNgH33Xmu
 CLIO_CLIENT_SECRET=z2RA9mW6O22RSYk5CJ2LWzB9XhdSsLu2FDnINurQ
-CLIO_REDIRECT_URI=http://127.0.0.1:3000/auth/signin 
+CLIO_REDIRECT_URI=http://127.0.0.1:3000/api/auth/callback/clio
 CLIO_REGION=app.clio.com
 
 # NextAuth Configuration
